# CancerBroker

./: .gitignore  AGENTS.md  Cargo.toml  README.md  _Sidebar.md  session-memory-plugin
.github/workflows/: ci.yml  npm-publish.yml  release-installer-asset.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: opencode-guardian.md
.sisyphus/evidence/: task-5-baseline-idle-rss.txt  task-5-baseline-peak-rss.txt  task-5-budget-check.txt  task-5-final-idle-rss.txt  task-5-final-peak-rss.txt  task-5-growth-10-rss.txt  task-5-summary.txt
.sisyphus/plans/: opencode-guardian.md  plugin-rss-minimization.md  rss-leak-termination.md  subagent-task-complete-autocleanup.md  windows-remediation-handle-fix.md
.sisyphus/tmp/: opencode_leak_lab.py  opencode_sandbox_incident_report_20260307.md  opencode_sandbox_leak_report_20260307.md
Formula/: opencode-session-memory-sidebar-installer.rb
fixtures/config/: completion-cleanup.toml  invalid.toml  observe-only.toml  thresholds-and-budgets.toml
install/: opencode-session-memory-sidebar.sh
packaging/launchd/: com.opencode.guardian.plist.sample
packaging/npm/: README.md
packaging/npm/opencode-session-memory-sidebar/: README.md  package.json  (+1 more)
packaging/npm/opencode-session-memory-sidebar-installer/: README.md  package.json
packaging/systemd/: opencode-guardian.service.sample
readme-pages/: chinese.md  english.md  index.md  japanese.md  korean-plugin-guide.md  korean.md  spanish.md
reports/: verification-report-2026-03-09.md
scripts/: dev-env.sh  measure_ra_guard_rss.sh  prepare-installer-release.mjs  session-memory-plugin.mjs  verify-installer-release.mjs
src/: autocleanup.rs  cleanup.rs  cli.rs  completion.rs  config.rs  daemon.rs  dispatch.rs  evidence.rs  ipc.rs  leak.rs  lib.rs  main.rs  mcp.rs  memory_guard.rs  metrics.rs  notification_session.rs  notifications.rs  orphans.rs  packaging.rs  platform.rs  policy.rs  remediation.rs  resolution.rs  runtime.rs  safety.rs  setup.rs  setup_tui.rs  setup_ui.rs
src/monitor/: mod.rs  process.rs  resources.rs  storage.rs
(+11 files in other folders)
