[package]
name = "opencode-guardian"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
config = "0.15"
interprocess = "2.2"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
nix = { version = "0.29", features = ["signal", "user"] }
notify = "8"
notify-debouncer-full = "0.4"
rustix = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
