[package]
name = "cancerbroker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
config = "0.15"
crossterm = "0.25"
interprocess = "2.2"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
netstat2 = "0.11"
notify = "8"
notify-debouncer-full = "0.4"
notify-rust = "4"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
rustix = "0.38"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tui = "0.19"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "user", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

[features]
default = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release-size]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
